# software-mouse-driver

./: CMakeLists.txt  README.md  main.c
device_self_tests/: CMakeLists.txt  device_self_tests.c  device_self_tests.h
device_self_tests/tests/: CMakeLists.txt  test_device_self_tests.cpp
fault_detector/: CMakeLists.txt  fault_detector.c  fault_detector.h
fault_detector/tests/: CMakeLists.txt  test_fault_detector.cpp
global_time/: CMakeLists.txt  global_time.c  global_time.h
global_time/tests/: CMakeLists.txt  test_global_time.cpp
initialization/: CMakeLists.txt  initialization.c  initialization.h
initialization/tests/: CMakeLists.txt  test_initialization.cpp
navigation/: CMakeLists.txt  navigation.c  navigation.h
navigation/tests/: CMakeLists.txt  test_navigation.cpp
repeat_hello_world/: CMakeLists.txt  repeat_hello_world.c  repeat_hello_world.h
repeat_hello_world/tests/: CMakeLists.txt  test_repeat_hello_world.cpp
time/: CMakeLists.txt  time.c  time.h
time/tests/: CMakeLists.txt  test_time.cpp
timer/: CMakeLists.txt  timer.c  timer.h
timer/tests/: CMakeLists.txt  test_timer.cpp
user_interface/: CMakeLists.txt  user_interface.c  user_interface.h
user_interface/tests/: CMakeLists.txt  test_user_interface.cpp
user_request/: CMakeLists.txt  user_request.c  user_request.h
user_request/tests/: CMakeLists.txt  test_user_request.cpp
